# codespaces-infusion-pump

./: .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci-firmware.yml  ci-python.yml  ci-rust.yml  ci-sbom.yml
backend/api-service/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/api-service/app/: main.py
backend/api-service/app/core/: config.py  database.py  security.py  settings.py
backend/api-service/app/models/: audit.py  base.py  control.py  device.py  domain.py
backend/api-service/app/routers/: audit.py  devices.py  drug_library.py  health.py  ml_models.py  patients.py  sessions.py
backend/api-service/app/schemas/: audit.py  control.py  device.py  drug_library.py  ml.py  patient.py
backend/api-service/migrations/: README.md  env.py
backend/api-service/migrations/versions/: 20251127_0001_init_schema.py
backend/api-service/tests/: conftest.py  test_devices.py  test_drug_library.py  test_health.py  test_ml_models.py  test_patients.py  test_rbac.py  test_security.py  test_sessions.py
backend/infra/: README.md
backend/infra/migrations/: 0001_create_core_tables.sql
backend/ingestion-service/: Dockerfile  README.md  pyproject.toml
backend/ingestion-service/scripts/: gen_proto.sh
backend/ingestion-service/src/ingestion_service/: config.py  server.py  telemetry_pb2.py  telemetry_pb2_grpc.py
backend/ingestion-service/tests/: test_config.py  test_server.py
docs/: executive-summary.md
docs/architecture/: requirements-overview.md  system-architecture.md
docs/change-control/: change-management-workflow.md  continuous-change-control-plan.md  ml-pccp.md  technical-debt-register.md
docs/ml/: ml-lifecycle.md
docs/regulatory/: compliance-matrix.md  risk-management-plan.md  software-description.md
docs/validation/: design-control-plan.md  traceability-matrix-template.csv  validation-master-plan.md
edge/inference-service/: Dockerfile  README.md  pyproject.toml
edge/inference-service/proto/: telemetry.proto
edge/inference-service/src/edge_inference/: __init__.py  config.py  model_runner.py  replay_fixture.py  service.py  telemetry_client.py
edge/inference-service/src/edge_inference/ingestion_proto/: telemetry_pb2.py  telemetry_pb2_grpc.py
edge/inference-service/tests/: test_demo_script_integration.py  test_replay_fixture.py  test_service.py  test_telemetry_client.py
edge/safety-controller/: Cargo.toml  Dockerfile
edge/safety-controller/src/: lib.rs  main.rs
edge/safety-controller/tests/: safety_tests.rs
firmware/: CMakeLists.txt  README.md
firmware/include/: communication.h  pump_hal.h  safety_controller.h
firmware/src/: communication.c  main.c  pump_hal.c  safety_controller.c
firmware/tests/: test_safety_controller.c
frontend/spark-ui/: README.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
ml/config/: acceptance-criteria.yaml
ops/iot/: gateway-bootstrap.md
ops/k8s/: platform-compose.yaml
ops/security/: sbom-template.cdx  threat-model.md
scripts/: run_synthetic_demo.sh
validation/protocols/: risk-verification-checklist.md  system-test-protocol.md
validation/reports/: README.md  debt-traceability-gap-report.md
validation/scripts/: generate_report.py  sync_debt_controls.py
(+34 files in other folders)
