[package]
name = "gateway_safety_controller"
version = "0.1.0"
edition = "2021"

description = "Deterministic safety controller for bedside gateway"
authors = ["Clinical Automation Team"]
license = "Proprietary"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
